# zero2prod

./: .dockerignore  .justfile  Cargo.toml  Dockerfile  flake.nix  readme.md  spec.yaml
.github/workflows/: ci.yml
.sqlx/: query-65250f5cecffc9c039b0f58192082d9f4c532a767f5e5932482454677738bd9c.json  query-9e5291c2c69885ee0b9ffa02b1c3917e0d4fd7d1e3be5d044456b5fea9dba931.json
configuration/: base.yaml  local.yaml
migrations/: 20250529204634_create_subscriptions_table.sql  20250705180303_create_users_table.sql  20250710165353_seed_user.sql  20250719035645_create_idempotency_table.sql  20250719114448_relax_null_checks_on_idempotency.sql  20250719231747_create_newsletter_issues_table.sql  20250719232606_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
