[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio", "tls-rustls"]


[dev-dependencies]
mime = "0.3.17"
rstest = "0.25.0"
tower = { version = "0.5.2", features = ["util"] }
