[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.41"
config = "0.15.11"
rand = { version = "0.9.1", features = ["std_rng"]}
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]


[dev-dependencies]
assertor = "0.0.3"
fake = "4.3.0"
linkify = "0.10.0"
mime = "0.3.17"
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rstest = "0.25.0"
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["util"] }
wiremock = "0.6.3"
